# pg_conda

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  conda-postgresql.spec  conda.control  pg_conda.control  pg_conda.spec
.github/: dependabot.yml
.github/workflows/: release.yaml  security.yaml  test.yaml
src/: lib.rs
tests/pg_regress/expected/: 10_is_dev.out  11_is_post.out  12_has_epoch.out  13_has_local.out  14_segments.out  15_major.out  16_minor.out  1_input.out  2_output.out  3_output_original.out  4_order.out  5_hash.out  6_aggregate_max.out  7_aggregate_min.out  8_nullable.out  9_errors.out
tests/pg_regress/sql/: 10_is_dev.sql  11_is_post.sql  12_has_epoch.sql  13_has_local.sql  14_segments.sql  15_major.sql  16_minor.sql  1_input.sql  2_output.sql  3_output_original.sql  4_order.sql  5_hash.sql  6_aggregate_max.sql  7_aggregate_min.sql  8_nullable.sql  9_errors.sql
